--- a/CSS/service.css
+++ b/CSS/service.css
@@ -7,41 +7,17 @@
   margin: 0 auto;
 }
 
-#service .service-bg {
-  padding: 3.5rem 0 1rem;
-  background: #f3f3f3;
-}
-
-#service .service-bg h2 {
-  margin: 1.25rem 0 4.5rem;
-  font-size: 1.75rem;
-  letter-spacing: 0.15rem;
-  text-align: center;
-  position: relative;
-  padding-bottom: 1rem;
-}
-
-#service .service-bg h2:before {
-  position: absolute;
-  bottom: -10px;
-  left: calc(50% - 30px);
-  width: 60px;
-  height: 5px;
-  content: '';
-  border-radius: 3px;
-  background: #a5a4a4;
-}
-
-#service .service-bg .service-container {
+#service .service-container {
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1100px;
   margin: 0 auto;
+  padding-bottom: 5rem;
 }
 
-#service .service-bg .service-container .service-block {
+#service .service-container .service-block {
   width: 470px;
   background: #fff;
   border: 1px solid #DDDDDD;
@@ -52,11 +28,11 @@
   transition: 0.5s;
 }
 
-#service .service-bg .service-container .service-block:hover {
+#service .service-container .service-block:hover {
   cursor: pointer;
 }
 
-#service .service-bg .service-container .service-block a {
+#service .service-container .service-block a {
   text-decoration: none;
   display: flex;
   justify-content: space-between;
@@ -64,39 +40,39 @@
   color: #333;
 }
 
-#service .service-bg .service-container .service-block a .s-icon {
+#service .service-container .service-block a .s-icon {
   width: 25%;
   margin: 0 auto;
 }
 
-#service .service-bg .service-container .service-block a .s-icon img {
+#service .service-container .service-block a .s-icon img {
   width: 100%;
 }
 
-#service .service-bg .service-container .service-block a .s-desc {
+#service .service-container .service-block a .s-desc {
   width: 70%;
   margin-left: 5%;
 }
 
-#service .service-bg .service-container .service-block a .s-desc p:nth-child(1) {
+#service .service-container .service-block a .s-desc p:nth-child(1) {
   font-size: 1.15rem;
   font-weight: bold;
   margin-top: 0;
 }
 
-#service .service-bg .service-container .service-block a .s-desc p:nth-child(2) {
+#service .service-container .service-block a .s-desc p:nth-child(2) {
   text-align: justify;
   font-size: 16px;
   letter-spacing: 1px;
   line-height: 1.25rem;
 }
 
-#service .service-bg .service-container .service-block a .s-desc span {
+#service .service-container .service-block a .s-desc span {
   font-size: 14px;
   font-weight: bold;
 }
 
-#service .service-bg .service-container .service-block:hover {
+#service .service-container .service-block:hover {
   transition: 0.5s;
   transform: translateY(-4px);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 10px 0 rgba(0, 0, 0, 0.12), 0 4px 7px -2px rgba(0, 0, 0, 0.2);
@@ -104,6 +80,18 @@
 
 #service .parallax {
   margin-top: 0;
+}
+
+.footer-serviceList {
+  background: #f3f3f3;
+}
+
+.footer-serviceList .service-ttl {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 0.25rem;
+  padding: 4rem 0 1rem;
 }
 
 .service-homepage .service-contents .homepage-block {
@@ -128,5 +116,27 @@
 
 .service-homepage .service-contents .homepage-block .block-desc p {
   letter-spacing: 1px;
+}
+
+.service-lppage .service-contents .lp-container .block2 .img-wrap ul {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.service-lppage .service-contents .lp-container .block2 .img-wrap ul li {
+  list-style: none;
+  width: 16%;
+  background: url(../IMG/lp/arrow-r.png) no-repeat right;
+  background-size: 24px;
+  padding-right: 3.2%;
+}
+
+.service-lppage .service-contents .lp-container .block2 .img-wrap ul li:last-child {
+  background: none;
+}
+
+.service-lppage .service-contents .lp-container .block2 .img-wrap ul li img {
+  width: 100%;
 }
 /*# sourceMappingURL=service.css.map */
