--- a/SASS/common.scss
+++ b/SASS/common.scss
@@ -68,6 +68,9 @@ header {
               color: #333;
               position: relative;
               padding-bottom: 0.5rem;
+              &:hover {
+                cursor: pointer;
+              }
               &::after {
                 position: absolute;
                 bottom: 0;
@@ -85,9 +88,7 @@ header {
             a#user-page::after {
               width: 100%;
             }
-            // &.h-cv {
-            //   @include cv-btn;
-            // }
+  
             &.detail-btn {
               @include detail-btn;
               margin: 0 0 0 1.8rem;
