--- a/SASS/_mixin.scss
+++ b/SASS/_mixin.scss
@@ -7,8 +7,10 @@
   line-height: 34px;
 }
 @mixin base-h2 {
+  font-weight: bold;
   font-size: 2rem;
   letter-spacing: 0.2rem;
+  margin: 1rem;
 }
 @mixin cv-btn {
   a {
