--- a/SASS/service.scss
+++ b/SASS/service.scss
@@ -124,21 +124,50 @@ body.service-advertisement {
     }
   }
   .block2 {
+    // border-bottom: 1px solid #dddddd;
+    padding-bottom: 4.75rem;
+    margin-bottom: 5rem;
     .block2-wrap {
       display: flex;
       justify-content: space-between;
-      .block2-1 {
-        padding: 2rem 3rem;
+      .block2-1,
+      .block2-2 {
+        padding: 2rem 2.5rem;
         width: 40%;
         border: 1px solid #333;
         h3 {
           margin-top: 0;
         }
-        ul li {
-          list-style: inherit;
-          font-size: 18px;
-          letter-spacing: 2px;
-          margin-bottom: 0.5rem;
+        table {
+          width: 100%;
+          tr {
+            &:nth-child(1) td {
+              padding-bottom: 0.75rem;
+            }
+            td {
+              width: 35%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+//----------------サイト保守・運用
+body.service-maintenance {
+  .service-contents .maintenance-container {
+    .block1 {
+      // border-bottom: 1px solid #dddddd;
+      padding-bottom: 2rem;
+      margin-bottom: 4rem;
+  
+      .block1-2 {
+        margin-bottom: 1.75rem;
+        h3 {
+          display: inline-block;
+          background: url(../IMG/advertisement/ico-check.svg) no-repeat left;
+          background-size: 18px;
+          padding-left: 24px;
         }
       }
     }
