--- a/CSS/common.css
+++ b/CSS/common.css
@@ -64,6 +64,7 @@ header {
   background: #fff;
   z-index: 10;
   transition: 0.5s;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 header.scroll-nav {
