--- a/CSS/service.css
+++ b/CSS/service.css
@@ -1,9 +1,6 @@
-#service header {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-}
-
 #service .service-contents {
-  width: 1100px;
+  width: 100%;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -20,7 +17,7 @@
 #service .service-container .service-block {
   width: 470px;
   background: #fff;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #dddddd;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 1.5rem;
@@ -70,6 +67,8 @@
 #service .service-container .service-block a .s-desc span {
   font-size: 14px;
   font-weight: bold;
+  margin-top: 1rem;
+  display: inline-block;
 }
 
 #service .service-container .service-block:hover {
