--- a/SASS/_mixin.scss
+++ b/SASS/_mixin.scss
@@ -57,9 +57,6 @@
 @mixin detail-btn {
   margin: 3rem auto;
   text-align: center;
-  // width: 330px;
-  // padding-bottom: 14px;
-  // padding-top: 14px;
   a {
     text-decoration: none;
     span {
@@ -213,7 +210,7 @@
   .service-block {
     width: 470px;
     background: #fff;
-    border: 1px solid #DDDDDD;
+    border: 1px solid #dddddd;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 1.5rem;
@@ -252,6 +249,8 @@
         span {
           font-size: 14px;
           font-weight: bold;
+          margin-top: 1rem;
+          display: inline-block;
         }
       }
     }
@@ -260,6 +259,86 @@
       transition: 0.5s;
       transform: translateY(-4px);
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 10px 0 rgba(0, 0, 0, 0.12), 0 4px 7px -2px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+@mixin product-container {
+  width: 1100px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .product-box {
+    width: 350px;
+    overflow: hidden;
+    // margin-bottom: 6rem;
+    a {
+      text-decoration: none;
+      transition: 0.4s;
+      img {
+        width: 100%;
+        transition: transform 0.4s;
+        transition: 0.4s;
+      }
+      .pro-cate {
+        margin: 1rem 0 0;
+        font-size: 14px;
+        color: #fff;
+        display: inline-block;
+        padding: 2px 18px 0px;
+        background-color: #333;
+        border-radius: 15px;
+        font-weight: bold;
+        letter-spacing: 0;
+      }
+      .pro-name {
+        // margin: 0;
+        color: #333;
+        font-size: 16px;
+        font-weight: bold;
+        margin-top: 0.5rem;
+      }
+      &:hover {
+        opacity: 0.8;
+        transition: 0.4s;
+        img {
+          transform: scale(1.05);
+          transition: transform 0.4s;
+        }
+      }
+    }
+  }
+}
+@mixin flowLabel {
+  p.flowTtl {
+    position: relative;
+    overflow: hidden;
+    padding: 16px 16px 16px 130px;
+    border-top: 3px solid #333;
+    font-size: 26px;
+    font-weight: bold;
+    &:before {
+      position: absolute;
+      top: -150%;
+      left: -50px;
+      width: 150px;
+      height: 300%;
+      content: "";
+      -webkit-transform: rotate(25deg);
+      transform: rotate(25deg);
+      background: #333;
+    }
+    span {
+      font-size: 40px;
+      position: absolute;
+      z-index: 1;
+      top: 11px;
+      left: 8px;
+      display: block;
+      padding-top: 3px;
+      padding-left: 16px;
+      color: #fff;
     }
   }
 }
