--- a/SASS/common.scss
+++ b/SASS/common.scss
@@ -16,6 +16,7 @@ header {
   background: #fff;
   z-index: 10;
   transition: 0.5s;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   &.scroll-nav {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     .sub-header {
@@ -88,7 +89,7 @@ header {
             a#user-page::after {
               width: 100%;
             }
-  
+
             &.detail-btn {
               @include detail-btn;
               margin: 0 0 0 1.8rem;
@@ -100,7 +101,6 @@ header {
                 &::after {
                   display: none;
                 }
-       
               }
             }
           }
