--- a/SASS/service.scss
+++ b/SASS/service.scss
@@ -1,35 +1,14 @@
 @import "_mixin";
 
 #service {
-  header {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  }
+  // header {
+  //   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  // }
   .service-contents {
-    width: 1100px;
+    width: 100%;
+    max-width: 1100px;
     margin: 0 auto;
   }
-  // .service-bg {
-  //   padding: 3.5rem 0 1rem;
-  //   background: #f3f3f3;
-
-  // h2 {
-  //   margin: 1.25rem 0 4.5rem;
-  //   font-size: 1.75rem;
-  //   letter-spacing: 0.15rem;
-  //   text-align: center;
-  //   position: relative;
-  //   padding-bottom: 1rem;
-  //   &:before {
-  //     position: absolute;
-  //     bottom: -10px;
-  //     left: calc(50% - 30px);
-  //     width: 60px;
-  //     height: 5px;
-  //     content: "";
-  //     border-radius: 3px;
-  //     background: #a5a4a4;
-  //   }
-  // }
 
   .service-container {
     @include service-container;
