--- a/SASS/top.scss
+++ b/SASS/top.scss
@@ -160,51 +160,7 @@
   .product {
     @include ttl-block;
     .product-container {
-      // @include block-layout;
-      width: 1100px;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .product-box {
-        width: 350px;
-        overflow: hidden;
-        a {
-          text-decoration: none;
-          img {
-            width: 100%;
-            transition: transform 0.4s;
-            transition: 0.4s;
-          }
-          .pro-cate {
-            margin: 1rem 0 0;
-            font-size: 14px;
-            color: #fff;
-            display: inline-block;
-            padding: 2px 18px 0px;
-            background-color: #333;
-            border-radius: 15px;
-            font-weight: bold;
-            letter-spacing: 0;
-          }
-          .pro-name {
-            // margin: 0;
-            color: #333;
-            font-size: 16px;
-            font-weight: bold;
-            margin-top: 0.5rem;
-          }
-          &:hover {
-            img {
-              transform: scale(1.05);
-              opacity: 0.8;
-              transition: 0.4s;
-              transition: transform 0.4s;
-            }
-          }
-        }
-      }
+      @include product-container;
     }
     .detail-btn {
       @include detail-btn;
