--- a/SASS/service.scss
+++ b/SASS/service.scss
@@ -5,9 +5,7 @@
   //   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   // }
   .service-contents {
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
+    @include common-layout;
   }
 
   .service-container {
