--- a/SASS/price.scss
+++ b/SASS/price.scss
@@ -30,64 +30,99 @@ body#price {
               transition: 0.4s;
             }
           }
-
         }
       }
     }
     h2 {
       padding-left: 1rem;
-      border-left: 5px solid #6095FA;
+      border-left: 5px solid #6095fa;
     }
-    .hp-block {
-      margin-top: 5rem;
-      .hp-wrap {
-        display: flex;
-        margin-top: 3rem;
-        .priceWrap-desc {
-          margin-left: 17%;
-          span.p-case {
-            padding: 8px 10px 8px 11px;
-            background: #575656;
-            color: #fff;
-            font-size: 12px;
-            letter-spacing: 2px;
-            display: inline-block;
-            margin-bottom: 0.75rem;
-          }
-          p.p-p2 {
-            font-size: 1.25rem;
-            font-weight: bold;
-            letter-spacing: 0.1rem;
-          }
-          p.p-p3 {
-            font-size: 1.5rem;
-            font-weight: bold;
-            letter-spacing: 0.2rem;
-            color: #053AC9;
-            margin: 1.25rem 0 1.25rem;
-            span {
-              font-size: 1rem;
-              letter-spacing: 0.1rem;
+    .web-wrap {
+      border-bottom: 2px solid #dddddd;
+      padding-bottom: 4rem;
+      .hp-block {
+        margin-top: 5rem;
+        .hp-wrap {
+          display: flex;
+          margin-top: 4rem;
+          .priceWrap-desc {
+            margin-left: 17%;
+            span.p-case {
+              padding: 8px 10px 8px 11px;
+              background: #575656;
+              color: #fff;
+              font-size: 12px;
+              letter-spacing: 2px;
+              display: inline-block;
+              margin-bottom: 0.75rem;
+            }
+            p.p-p2 {
+              font-size: 1.25rem;
               font-weight: bold;
+              letter-spacing: 0.1rem;
+            }
+            p.p-p3 {
+              font-size: 1.75rem;
+              font-weight: bold;
+              letter-spacing: 0.2rem;
+              color: #053ac9;
+              margin: 1.25rem 0 1.25rem;
+              span {
+                font-size: 1rem;
+                letter-spacing: 0.1rem;
+                font-weight: bold;
+              }
+            }
+            .p-p4 {
+              ul li {
+                list-style: none;
+                position: relative;
+                padding-left: 1rem;
+                margin-bottom: 1rem;
+                &:before {
+                  border-radius: 50%;
+                  width: 5px;
+                  height: 5px;
+                  display: block;
+                  position: absolute;
+                  left: 0;
+                  top: 0.36rem;
+                  content: "";
+                  background: #6095fa;
+                }
+              }
             }
           }
-          .p-p4 {
-            ul li {
-              list-style: none;
-              position: relative;
-              padding-left: 1rem;
-              margin-bottom: 1rem;
-              &:before {
-                border-radius: 50%;
-                width: 5px;
-                height: 5px;
-                display: block;
-                position: absolute;
-                left: 0;
-                top: 0.36rem;
-                content: "";
-                background: #6095FA;
-                }
+        }
+      }
+    }
+    .advertisement-wrap {
+      margin-bottom: 9rem;
+      padding-top: 4rem;
+      .advertisement-block {
+        margin-bottom: 4rem;
+        table {
+          width: 80%;
+          margin-left: 1rem;
+          // margin: 0 auto;
+          border-collapse: collapse;
+          tr {
+            th {
+              width: 55%;
+            }
+            td {
+              font-size: 1.5rem;
+              font-weight: bold;
+              letter-spacing: 0.2rem;
+              color: #053ac9;
+            }
+            th,
+            td {
+              border-bottom: 1px solid #333;
+              text-align: left;
+              font-size: 18px;
+              letter-spacing: 1px;
+              padding: 0.75rem;
             }
           }
         }
