--- a/CSS/product.css
+++ b/CSS/product.css
@@ -8,7 +8,7 @@ body#product .product-container {
 }
 
 body#product .product-container .product-box {
-  width: 350px;
+  width: 30%;
   overflow: hidden;
 }
 
