--- a/SASS/_mixin.scss
+++ b/SASS/_mixin.scss
@@ -276,7 +276,7 @@
   justify-content: space-between;
   align-items: center;
   .product-box {
-    width: 350px;
+    width: 30%;
     overflow: hidden;
     // margin-bottom: 6rem;
     a {
@@ -300,6 +300,48 @@
       }
       .pro-name {
         // margin: 0;
+        color: #333;
+        font-size: 16px;
+        font-weight: bold;
+        margin-top: 0.5rem;
+      }
+      &:hover {
+        opacity: 0.8;
+        transition: 0.4s;
+        img {
+          transform: scale(1.05);
+          transition: transform 0.4s;
+        }
+      }
+    }
+  }
+}
+@mixin blog-container {
+  width: 1100px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .blog-block {
+    width: 30%;
+    overflow: hidden;
+    margin-top: 3rem;
+    a {
+      text-decoration: none;
+      transition: 0.4s;
+      img {
+        width: 100%;
+        transition: transform 0.4s;
+        transition: 0.4s;
+      }
+      span {
+        color: #333;
+        display: inline-block;
+        margin-top: 0.5rem;
+        font-size: 14px;
+      }
+      h2 {
         color: #333;
         font-size: 16px;
         font-weight: bold;
